--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "mrin",
   "license": "MIT",
   "dependencies": {
+    "aws-sdk": "^2.1073.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.1",
     "cors": "^2.8.5",
@@ -19,6 +20,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.1.2",
     "multer": "^1.4.4",
+    "multer-s3": "^2.10.0",
     "nodemailer": "^6.7.2"
   }
 }
