--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "mongoose": "^6.1.2",
     "multer": "^1.4.4",
     "multer-s3": "^2.10.0",
-    "nodemailer": "^6.7.2"
+    "nodemailer": "^6.7.2",
+    "razorpay": "^2.8.1"
   }
 }
