Resolved sendEmail error

--- a/.env-example
+++ b/.env-example
@@ -9,3 +9,8 @@ EMAIL_USER=
 EMAIL_PASS=
 EMAIL_FROM=
 CLIENT_ADMIN_URL=
+CLIENT_CUSTOMER_URL=
+RAZORPAY_KEY=
+RAZORPAY_SECRET=
+AWS_ACCESS_KEY_ID=
+AWS_SECRET_KEY=
