--- a/vercel.json
+++ b/vercel.json
@@ -2,16 +2,16 @@
     "version": 2,
     "builds": [
       {
-        "src": "index.js",
+        "src": "src/index.js",
         "use": "@now/node"
       }
     ],
     "routes": [
       {
-        // Specify which paths will route to a destination using a regex
+        
         "src": "/(.*)",
-        // Specify the paths' destination
-        "dest": "index.js"
+        
+        "dest": "src/index.js"
       }
     ]
   }
