Changed env variable name

--- a/.env-example
+++ b/.env-example
@@ -12,5 +12,5 @@ CLIENT_ADMIN_URL=
 CLIENT_CUSTOMER_URL=
 RAZORPAY_KEY=
 RAZORPAY_SECRET=
-AWS_ACCESS_KEY_ID=
-AWS_SECRET_KEY=
+AWS_ACCESS_PRIVATE_KEY_ID=
+AWS_PRIVATE_SECRET_KEY=
